k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamepulse-app-service
spec:
  selector:
    app: gamepulse-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
