k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamepulse-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: gamepulse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamepulse-app-service
                port:
                  number: 8080
    - host: gamepulse.vbnmzxc.shop
      # 외부 도메인 추가
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamepulse-app-service
                port:
                  number: 8080
